--- a/03_reusable_code/Simluated_results_multiverse.qmd
+++ b/03_reusable_code/Simluated_results_multiverse.qmd
@@ -1,81 +1,17 @@
 ---
-title: "Untitled"
+title: "Simulated Results Multiverse"
 format: html
 ---
 
 ```{r}
+# Load required packages
 library(ggplot2)
-
-set.seed(123)
-
-# Simulate data DV
-n <- 400
-means <- c(0.95, 1.025, 1,  0.975, 1.05)
-sd    <- 0.03
-
-# Create a data frame with simulated odds ratio per operationalisation of the DV
-dat <- data.frame(
-  odds_ratio = unlist(
-    lapply(means, function(mu) {
-      # let 5 of the outcomes follow normal distributions
-      exp(rnorm(n, mean = log(mu), sd = sd)) 
-    })
-  ),
-  DV = rep(
-    paste0("Operationalisation ", 1:5),
-    each = n
-  )
-) 
-
-# and the other 2 follow different beta distributions
-or6 <- data.frame(odds_ratio = rbeta(n, 3,2), DV = rep("Operationalisation 6", 400))
-    
-or7 <- data.frame(odds_ratio=rbeta(n, 6,2), 
-                  DV = rep("Operationalisation 7", 400))
-
-# combine all DV datasets
-dat <- rbind(dat, or6, or7)
-
-dat$model <- rep(
-    c("Cox Hazard", "Logistic", "Log-binomial",
-        "Mixed-effects", "Discrete Time",
-        "Generalised Estimating Equation"), length.out = nrow(dat))
-
-
-n <- nrow(dat)
-
-n_long <- floor(2 * n / 3)
-n_cross <- n - n_long
-
-dat$datatype <- c(rep(
-    c("Strict Longitudinal", "Non-strict Longitudinal"),
-     length.out = n_long
-    ),
-    rep(
-    "Cross-sectional",
-     length.out = n_cross
-    ))
- 
-
-
-# plot the densities of all outcome distributions to show how they differ
-ggplot(dat, aes(x = odds_ratio, colour = datatype)) +
-  geom_density(size = 1) +
-  geom_vline(xintercept = 1, linetype = "dashed") + # OR = 1, no effect
-  labs(
-    x = "Odds Ratio",
-    y = "Density",
-    colour = "Variable operationalisation"
-  ) +
-  theme_minimal() + 
-   theme(text = element_text(size = 20)) 
 ```
 
 ```{r}
+# Set up decision space, where all combinations of decisions are mapped
 decision_space <- expand.grid(
  
-  outcome         = c(paste0("Operationalisation ", 1:7)),
-  
   datatype       = c("Strict Longitudinal", 
                      "Non-strict Longitudinal",
                      "Cross-sectional"),  
@@ -88,6 +24,8 @@ decision_space <- expand.grid(
                        "Discrete Time",
                        "Generalised Estimating Equation"), 
   
+  outcome         = c(paste0("Operationalisation ", 1:7)),
+  
   confounder      = c("Age", 
                       "Sex", 
                       "Country",
@@ -99,18 +37,23 @@ decision_space <- expand.grid(
 ```
 
 ```{r}
+# Set seed to ensure reproducibility
 set.seed(123)
 
 n <- nrow(decision_space)
 
+# For good visualisation of decision sensitivity
+# 2/3 of the resulting odds ratios will follow a normal distribution 
 n_norm <- floor(2 * n / 3)
+
+# and 1/3 will follow a beta
 n_beta <- n - n_norm
 
-# Simulate data odds ratios
+# Conditions for normal distribution
 mean <- 1
-sd    <- 0.05
+sd  <- 0.05
 
-# Create a data frame with simulated odds ratio per operationalisation of the DV
+# Normally distributed odds ratios
 or_norm <- data.frame(
   odds_ratio = unlist(
     lapply(mean, function(mu) {
@@ -119,16 +62,16 @@ or_norm <- data.frame(
   )
 ) 
 
-# and the other 2 follow different beta distributions
+# Beta distributed odds ratios
 or_beta <- data.frame(odds_ratio = rbeta(n_beta, 3,2))
     
+# Create one data frame that contains the decisions and outcomes
 dat <- decision_space
-
 dat$odds_ratio <- c(or_norm$odds_ratio, or_beta$odds_ratio)
 ```
 
 ```{r}
-# plot the densities of all outcome distributions to show how they differ
+# Plot the densities of all outcome distributions to show how they differ
 ggplot(dat, aes(x = odds_ratio, colour = outcome)) +
   geom_density(size = 1) +
   geom_vline(xintercept = 1, linetype = "dashed") + # OR = 1, no effect
