decision space plot

--- a/03_reusable_code/Decision_Space_Plot.qmd
+++ b/03_reusable_code/Decision_Space_Plot.qmd
@@ -40,20 +40,14 @@ decision_space <- expand.grid(
                           "NONE")
     )
 
-# Reshape to long form for plotting
-decisions <- decision_space %>% 
-  mutate(spec_id = row_number()) %>%
-  pivot_longer(-spec_id, names_to = "decision", values_to = "option")
-
-
 # Plot the different research paths
 decisionplot <- ggplot(decision_space,
        aes(axis1 = datatype, axis2 = outcome, axis3 = confounder, axis4 = model)) +
   geom_alluvium(aes(fill = datatype), knot.pos = 0.1, alpha = .55) +
   geom_stratum() +
   geom_text(stat = "stratum", aes(label = after_stat(stratum))) +
-  scale_x_discrete(limits = c("Data", "Outcome", "Confounder", "Model"))  +
-  theme_minimal() + ylab("Number of possible decisions") +
+  scale_x_discrete(limits = c("Data", "Dependent Variable", "Confounder", "Model"))  +
+  theme_minimal() + ylab("Number of possible analytical paths") +
   labs(fill = "Data")+
   theme(
     axis.title = element_text(size = 16),   # x and y axis titles
